# HSA-Runtime-Reference-Source

./: LICENSE.txt  README.md
core/: CMakeLists.txt  hsacore.so.def
core/common/: hsa_table_interface.cpp  shared.cpp  shared.h
core/inc/: agent.h  amd_blit_kernel.h  amd_blit_kernel_kv.h  amd_blit_sdma.h  amd_cpu_agent.h  amd_dgpu_agent.h  amd_elf_image.hpp  amd_gpu_agent.h  amd_hsa_code.hpp  amd_hsa_loader.hpp  amd_hw_aql_command_processor.h  amd_kernel_code.h  amd_load_map.h  amd_loader_context.hpp  amd_memory_region.h  amd_memory_registration.h  amd_queue_interface.h  amd_sdma_cmdwriter_kv.h  amd_topology.h  blit.h  checked.h  default_signal.h  host_queue.h  hsa_api_trace_int.h  hsa_code_unit.h  hsa_ext_interface.h  hsa_internal.h  hsa_table_interface.h  interrupt_signal.h  memory_database.h  memory_region.h  queue.h  registers.h  runtime.h  signal.h  thunk.h
core/loader/: compute_capability.cpp  compute_capability.hpp  executable.cpp  executable.hpp  isa.cpp  isa.hpp
core/runtime/: Makefile.runtime  amd_blit_kernel.cpp  amd_blit_sdma.cpp  amd_cpu_agent.cpp  amd_dgpu_agent.cpp  amd_gpu_agent.cpp  amd_hw_aql_command_processor.cpp  amd_load_map.cpp  amd_loader_context.cpp  amd_memory_region.cpp  amd_memory_registration.cpp  amd_sdma_cmdwriter_kv.cpp  amd_topology.cpp  compute_capability.cpp  compute_capability.hpp  default_signal.cpp  host_queue.cpp  hsa.cpp  hsa_api_trace.cpp  hsa_code_unit.cpp  hsa_ext_amd.cpp  hsa_ext_interface.cpp  interrupt_signal.cpp  isa.cpp  isa.hpp  memory_database.cpp  runtime.cpp  signal.cpp
core/tools/libamdhsacode/: amd_elf_image.cpp  amd_hsa_code.cpp  amd_hsa_code_util.cpp  amd_hsa_code_util.hpp  amd_hsa_locks.cpp  amd_hsa_locks.hpp  util.cpp  util.hpp  xutil.cpp  xutil.hpp
core/tools/loader/: executable.cpp  executable.hpp
core/util/: Makefile.util  atomic_helpers.h  function_traits.h  locks.h  os.h  small_heap.cpp  small_heap.h  timer.cpp  timer.h  utils.h
core/util/lnx/: os_linux.cpp
inc/: amd_hsa_common.h  hsa_api_trace.h  hsa_ext_amd.h  hsa_ext_finalize.h
samples/MatrixMultiplication/: Makefile  MatMul.cl  README.md  compile_and_link.sh  main.c
